k8s/labs/lab-1.3-jobs-cronjobs.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ckad-lab
  labels:
    purpose: ckad
