k8s/labs/lab-1.1-60-second-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: learnhub
    component: course
    lab: "1.1"
    workload: api
  name: learnhub-60s
  namespace: ckad-lab
spec:
  containers:
    - env:
        - name: SERVICE_NAME
          value: course-service
        - name: APP_ENV
          value: lab
        - name: APP_VERSION
          value: lab-1.1
      image: learnhub/course-service:0.1.0
      imagePullPolicy: IfNotPresent
      name: course-service
      ports:
        - name: http
          containerPort: 8080
      resources:
        limits:
          cpu: 250m
          memory: 256Mi
        requests:
          cpu: 100m
          memory: 128Mi
  restartPolicy: Never
