k8s/labs/lab-3.3-serviceaccount-rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rbac-lab
  labels:
    purpose: ckad
    lab: "3.3"
---
apiVersion: v1
kind: Pod
metadata:
  name: learnhub-rbac-api
  namespace: rbac-lab
  labels:
    app: learnhub-rbac
    component: course
    lab: "3.3"
spec:
  containers:
    - name: course-service
      image: learnhub/course-service:0.1.0
      imagePullPolicy: IfNotPresent
      ports:
        - name: http
          containerPort: 8080
      resources:
        requests:
          cpu: 50m
          memory: 64Mi
        limits:
          cpu: 250m
          memory: 128Mi
---
apiVersion: v1
kind: Pod
metadata:
  name: learnhub-rbac-client
  namespace: rbac-lab
  labels:
    app: learnhub-rbac
    component: kubernetes-api-client
    lab: "3.3"
spec:
  serviceAccountName: learnhub-pod-reader
  automountServiceAccountToken: true
  volumes:
    - name: rbac-scripts
      configMap:
        name: learnhub-rbac-scripts
        defaultMode: 0555
  containers:
    - name: api-client
      image: curlimages/curl:8.10.1
      imagePullPolicy: IfNotPresent
      command:
        - sh
        - -c
        - sleep 3600
      resources:
        requests:
          cpu: 10m
          memory: 16Mi
        limits:
          cpu: 50m
          memory: 32Mi
      volumeMounts:
        - name: rbac-scripts
          mountPath: /scripts
          readOnly: true
