k8s/labs/lab-3.4-quota-exceeded-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: learnhub-quota-notification
  namespace: quota-lab
  labels:
    app: learnhub-quota
    component: notification
    lab: "3.4"
spec:
  containers:
    - name: notification-service
      image: learnhub/notification-service:0.1.0
      imagePullPolicy: IfNotPresent
      ports:
        - name: http
          containerPort: 8080
