k8s/labs/lab-4.4-pvc-writer-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: learnhub-pvc-writer
  namespace: storage-lab
  labels:
    app: learnhub-storage
    role: writer
    lab: "4.4"
spec:
  containers:
    - name: writer
      image: busybox:1.36
      imagePullPolicy: IfNotPresent
      command:
        - sh
        - -c
        - |
          set -eu
          mkdir -p /data/courses
          echo "course_id=c-k8s-ckad" > /data/courses/progress.txt
          echo "lesson_id=l-02" >> /data/courses/progress.txt
          echo "status=persisted" >> /data/courses/progress.txt
          sleep 3600
      volumeMounts:
        - name: course-cache
          mountPath: /data
      resources:
        requests:
          cpu: 10m
          memory: 16Mi
        limits:
          cpu: 50m
          memory: 32Mi
  volumes:
    - name: course-cache
      persistentVolumeClaim:
        claimName: learnhub-course-cache
