k8s/labs/lab-2.1-rolling-update-rollback.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rollout-lab
  labels:
    purpose: ckad
    lab: "2.1"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: learnhub-course-api
  namespace: rollout-lab
  labels:
    app: learnhub-course-api
    component: course
    lab: "2.1"
  annotations:
    kubernetes.io/change-cause: "Initial deploy course-service using learnhub/course-service:0.1.0"
spec:
  replicas: 3
  revisionHistoryLimit: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: learnhub-course-api
  template:
    metadata:
      labels:
        app: learnhub-course-api
        component: course
        lab: "2.1"
    spec:
      containers:
        - name: course-service
          image: learnhub/course-service:0.1.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /readyz
              port: http
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: learnhub-course-api
  namespace: rollout-lab
  labels:
    app: learnhub-course-api
    component: course
    lab: "2.1"
spec:
  type: ClusterIP
  selector:
    app: learnhub-course-api
  ports:
    - name: http
      port: 80
      targetPort: http
