k8s/labs/lab-2.2-blue-green-switch.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bluegreen-lab
  labels:
    purpose: ckad
    lab: "2.2"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: learnhub-course-blue
  namespace: bluegreen-lab
  labels:
    app: learnhub-course
    component: course
    color: blue
    lab: "2.2"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: learnhub-course
      color: blue
  template:
    metadata:
      labels:
        app: learnhub-course
        component: course
        color: blue
        version: v1
    spec:
      containers:
        - name: course-service
          image: learnhub/course-service:0.1.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /readyz
              port: http
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              cpu: 25m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: learnhub-course-green
  namespace: bluegreen-lab
  labels:
    app: learnhub-course
    component: course
    color: green
    lab: "2.2"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: learnhub-course
      color: green
  template:
    metadata:
      labels:
        app: learnhub-course
        component: course
        color: green
        version: v2
    spec:
      containers:
        - name: course-service
          image: learnhub/course-service:0.1.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /readyz
              port: http
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              cpu: 25m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  name: learnhub-course-api
  namespace: bluegreen-lab
  labels:
    app: learnhub-course
    component: course
    lab: "2.2"
spec:
  type: ClusterIP
  selector:
    app: learnhub-course
    color: blue
  ports:
    - name: http
      port: 80
      targetPort: http
