k8s/labs/lab-3.2-security-context-lockdown.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: security-lab
  labels:
    purpose: ckad
    lab: "3.2"
---
apiVersion: v1
kind: Pod
metadata:
  name: learnhub-course-secure
  namespace: security-lab
  labels:
    app: learnhub-course-secure
    component: course
    lab: "3.2"
spec:
  securityContext:
    runAsNonRoot: true
    runAsUser: 10001
    runAsGroup: 10001
    seccompProfile:
      type: RuntimeDefault
  containers:
    - name: course-service
      image: learnhub/course-service:0.1.0
      imagePullPolicy: IfNotPresent
      ports:
        - name: http
          containerPort: 8080
      securityContext:
        allowPrivilegeEscalation: false
        readOnlyRootFilesystem: true
        capabilities:
          drop:
            - ALL
      readinessProbe:
        httpGet:
          path: /readyz
          port: http
        initialDelaySeconds: 3
        periodSeconds: 5
      livenessProbe:
        httpGet:
          path: /healthz
          port: http
        initialDelaySeconds: 10
        periodSeconds: 10
      resources:
        requests:
          cpu: 50m
          memory: 64Mi
        limits:
          cpu: 250m
          memory: 128Mi
    - name: security-checker
      image: busybox:1.36
      imagePullPolicy: IfNotPresent
      command:
        - sh
        - -c
        - sleep 3600
      securityContext:
        allowPrivilegeEscalation: false
        readOnlyRootFilesystem: true
        capabilities:
          drop:
            - ALL
      resources:
        requests:
          cpu: 10m
          memory: 16Mi
        limits:
          cpu: 50m
          memory: 32Mi
---
apiVersion: v1
kind: Service
metadata:
  name: learnhub-course-secure
  namespace: security-lab
  labels:
    app: learnhub-course-secure
    component: course
    lab: "3.2"
spec:
  type: ClusterIP
  selector:
    app: learnhub-course-secure
  ports:
    - name: http
      port: 80
      targetPort: http
