k8s/labs/lab-5.3-broken-runtime.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: triage-lab
  labels:
    purpose: ckad
    lab: "5.3"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: learnhub-triage-api
  namespace: triage-lab
  labels:
    app: learnhub-triage-api
    component: course
    lab: "5.3"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: learnhub-triage-api
  template:
    metadata:
      labels:
        app: learnhub-triage-api
        component: course
        lab: "5.3"
    spec:
      containers:
        - name: course-service
          image: "bad image name"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /readyz
              port: http
            initialDelaySeconds: 3
            periodSeconds: 5
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: learnhub-triage-api
  namespace: triage-lab
  labels:
    app: learnhub-triage-api
    lab: "5.3"
spec:
  type: ClusterIP
  selector:
    app: learnhub-triage-api
  ports:
    - name: http
      port: 80
      targetPort: wrong-http
