k8s/labs/lab-5.3-fix-service-targetport.yaml
apiVersion: v1
kind: Service
metadata:
  name: learnhub-triage-api
  namespace: triage-lab
  labels:
    app: learnhub-triage-api
    lab: "5.3"
spec:
  type: ClusterIP
  selector:
    app: learnhub-triage-api
  ports:
    - name: http
      port: 80
      targetPort: http
